# bazelcon-2019

1-up-and-running/: WORKSPACE
2-java-tooling/: .gitignore  exercise.sh
2-java-tooling/src/main/java/com/example/myproject/: Greeter.java
3-java-dependencies/: .gitignore  WORKSPACE  exercise.sh  jdks.bzl  mvn_install.json
3-java-dependencies/app-one/src/test/java/com/example/myproject/: BUILD.bazel
4-multi-language/: WORKSPACE  exercise.sh  print.bzl  std.bzl
4-multi-language/apidef/: BUILD.bazel  macros.bzl
4-multi-language/frontend/: BUILD.bazel
4-multi-language/rules/: std.bzl
4-multi-language/service/src/main/java/com/oasisdigital/grocery/: BUILD.bazel
